--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" type="image/svg+xml" href="./src/assets/zeyra-icon.svg"/>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/zeyra-circle.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>NEO DESIGN | Gerador de sites ✨</title>
     <meta
